--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_iconstart"
         android:label="@string/app_name"
@@ -14,13 +13,13 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/LightTheme"
         tools:targetApi="m">
-        <activity android:name="kz.kaspi.translit.ui.SplashActivity">
+        <activity android:name="kz.kaspi.translit.view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="kz.kaspi.translit.ui.MainActivity">
+        <activity android:name="kz.kaspi.translit.view.MainActivity">
         </activity>
         </application>
 </manifest>
