--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.appdistribution'
 
 
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.3'
+
+
 
     defaultConfig {
         applicationId "kz.kaspi.translit"
@@ -15,6 +18,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true //important
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -75,11 +79,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
 
     //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.7.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
-    implementation "com.squareup.retrofit2:converter-scalars:2.6.2"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.2"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.7.2"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.7.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -107,11 +111,13 @@ dependencies {
     testImplementation 'androidx.test:core:1.2.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     //firebase DB
-    implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
     //viewpager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //motion layout
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
 //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
