--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,23 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         google()
         jcenter()
     }
 
     dependencies {
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:8.2.0"
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
+        }
 }
 allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
     repositories {
         google()
         jcenter()
