--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation "com.google.firebase:firebase-firestore:21.1.1"
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 //    annotationProcessor 'androidx.annotation:annotation:1.0.0'
